[gd_scene load_steps=9 format=2]

[ext_resource path="res://RadialMenu.gd" type="Script" id=1]
[ext_resource path="res://RadialMenuFont.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ubuntu.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0.0588235, 0.0509804, 0.0509804, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://ubuntu.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://ubuntu.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0.0666667, 0.0509804, 0.0509804, 1 )
use_filter = true
font_data = SubResource( 5 )

[node name="RadialMenu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Node" parent="."]

[node name="Regroup" type="Button" parent="Control"]
margin_right = 68.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.94902, 0.94902, 1 )
text = "รณ"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Regroup"]
margin_top = 45.0
margin_right = 67.0
margin_bottom = 67.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.945098, 0.945098, 1 )
text = "Regroup"
align = 1

[node name="Attack" type="Button" parent="Control"]
visible = false
margin_right = 61.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "$"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Attack"]
margin_left = 4.0
margin_top = 45.0
margin_right = 48.0
margin_bottom = 59.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.937255, 0.937255, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Attack"
align = 1

[node name="Go" type="Button" parent="Control"]
visible = false
margin_right = 48.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.964706, 0.964706, 1 )
text = "\\"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Go"]
margin_top = 45.0
margin_right = 48.0
margin_bottom = 65.0
mouse_filter = 1
custom_fonts/font = SubResource( 6 )
text = "Go"
align = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Control/Regroup" to="." method="_on_Regroup_pressed"]
[connection signal="pressed" from="Control/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Control/Go" to="." method="_on_Go_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
